# goit-hm-web-07

./: config.ini  my_select.py  pyproject.toml
conf/: db.py  models.py
migrations/versions/: cdbb9490630a_init.py
