[tool.poetry]
name = "second"
version = "0.1.0"
description = ""
authors = ["Hnatiak <58102343+Hnatiak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
poetry = "^1.8.2"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
